--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 theme: jekyll-theme-minimal
 title: TestBed
 description: A description has to go here, but for now it is just this msg.
+tagline: this is the tagline
+logo: /assets/icons/icon.png
 show_downloads: true
+
 
 author:
   name:  Inaki Lopez
@@ -9,5 +12,4 @@ author:
   social:
     twitter: ilodev
     github:  ilodev
-  about: |
-    Hi, just a small bio about...
+  about: Hi, just a small bio about...
