--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 title: TestBed
 description: A description has to go here, but for now it is just this msg.
 tagline: this is the tagline
-logo: /assets/icons/icon.png
+logo: /assets/img/logo.png
 show_downloads: true
 
 
